reduced image size again , fixed gap on right side in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@
     --color-primary-950: #00245b;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body {
     @apply antialiased bg-slate-50 text-slate-900;
 }
